syntax = "proto3";
package cross.core;

option go_package = "github.com/datachainlab/cross/x/core/types";

import "gogoproto/gogo.proto";
import "ibc/core/client/v1/client.proto";
import "google/protobuf/any.proto";

message MsgInitiate {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string sender = 1;
  uint64 nonce  = 2;
  uint32 commit_protocol = 3;

  // Timeout height relative to the current block height.
  // The timeout is disabled when set to 0.
  ibc.core.client.v1.Height timeout_height = 4
      [(gogoproto.moretags) = "yaml:\"timeout_height\"", (gogoproto.nullable) = false];
  // Timeout timestamp (in nanoseconds) relative to the current block timestamp.
  // The timeout is disabled when set to 0.
  uint64 timeout_timestamp = 5
    [(gogoproto.moretags) = "yaml:\"timeout_timestamp\""];

  repeated ContractTransaction contract_transactions = 6 [(gogoproto.nullable) = false];
}

message ContractTransaction {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  google.protobuf.Any chain_id = 1 [(gogoproto.nullable) = false];
  repeated string signers      = 2;
  bytes call_info = 3;
  StateConstraint state_constraint = 4 [(gogoproto.nullable) = false];
  ReturnValue return_value = 5;
  repeated google.protobuf.Any links = 6 [(gogoproto.nullable) = false];
}

message StateConstraint {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  uint32 type = 1;
  repeated google.protobuf.Any ops = 2 [(gogoproto.nullable) = false];
}

message ReturnValue {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  bytes value = 1;
}
