syntax = "proto3";
package cross.core;

import "gogoproto/gogo.proto";
import "ibc/core/client/v1/client.proto";
import "cross/core/types.proto";

option go_package = "github.com/datachainlab/cross/x/core/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the cross Msg service.
service Msg {
  // InitiateTx defines a rpc handler method for MsgInitiateTx.
  rpc InitiateTx(MsgInitiateTx) returns (MsgInitiateTxResponse);
}

message MsgInitiateTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  bytes  sender   = 1 [(gogoproto.casttype) = "AccountAddress"];
  string chain_id = 2;
  uint64 nonce    = 3;
  uint32 commit_protocol = 4;

  // Timeout height relative to the current block height.
  // The timeout is disabled when set to 0.
  ibc.core.client.v1.Height timeout_height = 5
      [(gogoproto.moretags) = "yaml:\"timeout_height\"", (gogoproto.nullable) = false];
  // Timeout timestamp (in nanoseconds) relative to the current block timestamp.
  // The timeout is disabled when set to 0.
  uint64 timeout_timestamp = 6
    [(gogoproto.moretags) = "yaml:\"timeout_timestamp\""];

  repeated cross.core.ContractTransaction contract_transactions = 7 [(gogoproto.nullable) = false];
  repeated bytes signers = 8 [(gogoproto.casttype) = "AccountAddress"];
}

// MsgInitiateTxResponse defines the Msg/Initiate response type.
message MsgInitiateTxResponse {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  InitiateTxStatus status = 1;
}

enum InitiateTxStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  INITIATE_TX_STATUS_UNKNOWN   = 0;
  INITIATE_TX_STATUS_PENDING   = 1;
  INITIATE_TX_STATUS_VERIFIED  = 2;
}
